# DbZeiterfassung

./: .gitmodules  .travis.yml  CMakeLists.txt  DbZeiterfassung.pro  Dockerfile  README.md
plugins/: CMakeLists.txt  plugin.pri  plugins.pro
zeiterfassung/: CMakeLists.txt  zeiterfassung.pro
zeiterfassungclient/: CMakeLists.txt  main.cpp  zeiterfassungclient.pro
zeiterfassungclient/strips/: timeassignmentstrip.ui
zeiterfassungclient/translations/: zeiterfassungclient_de.ts  zeiterfassungclient_en.ts
zeiterfassungcorelib/: CMakeLists.txt  timeutils.h  zeiterfassungapi.h  zeiterfassungcorelib.pro  zeiterfassungcorelib_global.h  zeiterfassungsettings.cpp  zeiterfassungsettings.h
zeiterfassungcorelib/replies/: createbookingreply.h  createtimeassignmentreply.h  deletebookingreply.h  deletetimeassignmentreply.h  getabsencesreply.h  getbookingsreply.h  getdayinforeply.h  getpresencestatusreply.h  getprojectsreply.h  getreportreply.h  gettimeassignmentsreply.h  getuserinforeply.h  loginpagereply.h  loginreply.h  updatebookingreply.h  updatetimeassignmentreply.h  zeiterfassungreply.h
zeiterfassungguilib/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  projectsmodel.cpp  projectsmodel.h  settingswidget.h  stripfactory.h  stripswidget.cpp  stripswidget.h  zeiterfassungdialog.h  zeiterfassungguilib.pro  zeiterfassungguilib_global.h  zeiterfassungplugin.h
zeiterfassungguilib/dialogs/: authenticationdialog.h  languageselectiondialog.h  settingsdialog.h
zeiterfassungguilib/translations/: zeiterfassungguilib_de.ts  zeiterfassungguilib_en.ts
zeiterfassungnetworklib/: CMakeLists.txt  zeiterfassungapi.cpp  zeiterfassungapi.h  zeiterfassungnetworklib.pro  zeiterfassungnetworklib_global.h
zeiterfassungnetworklib/replies/: createbookingreply.h  createtimeassignmentreply.h  deletebookingreply.h  deletetimeassignmentreply.h  getabsencesreply.h  getbookingsreply.cpp  getbookingsreply.h  getcomboboxreply.cpp  getcomboboxreply.h  getdayinforeply.h  getpresencestatusreply.h  getprojectsreply.h  getreportreply.h  gettimeassignmentsreply.cpp  gettimeassignmentsreply.h  getuserinforeply.h  loginpagereply.h  loginreply.h  updatebookingreply.h  updatetimeassignmentreply.h  zeiterfassungreply.cpp  zeiterfassungreply.h
zeiterfassungnetworklib/translations/: zeiterfassungnetworklib_de.ts  zeiterfassungnetworklib_en.ts
